--- a/recipes/mjolnir.html
+++ b/recipes/mjolnir.html
@@ -10,15 +10,15 @@
         <img src="../images/mjolnir.jpg">
         <ul>
             <h2>Ingredients</h2>
-            <il>Bronze Alloy</il>
-            <il>Wooden handle</il>
-            <il>Dying star</il>
+            <li>Bronze Alloy</li>
+            <li>Wooden handle</li>
+            <li>Dying star</li>
         </ul>
         <ol>
             <h2>Steps</h2>
-            <il>Forge the metal</il>
-            <il>Alloy with bronze</il>
-            <il>Use a dying star as the furnace</il>
+            <li>Forge the metal</li>
+            <li>Alloy with bronze</li>
+            <li>Use a dying star as the furnace</li>
         </ol>
     </body>
 </html>
